--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 		<div class="container" id="bio">
 			<article class="col-md-10">
 				<p>I'm a Web & Android Enthusiast and a Computer Science Grad. from <a href="http://jiit.ac.in" rel="nofollow" target="_blank">Jaypee Institute of Information Technology</a>.</p>
-				<p>I love to code in Ruby and develop the web with <a 	href="https://github.com/addiittya2006/Mac-Ruby_sync" target="_blank">Ruby on Rails</a>.</p>
 				<p>I develop <a href="https://github.com/addiittya2006/Mac-Studio_sync" target="_blank" >Android Apps</a> for Fun and am also very keen towards designing interesting mobile UI's and developing Offline First, Scalable Apps.</p>
+				<p>I love to code in Ruby and develop the web with <a 	href="https://github.com/addiittya2006/Mac-Ruby_sync" target="_blank">Ruby on Rails</a>.</p>
 				<p>I am also familiar with <a href="https://github.com/addiittya2006/Mac-Py_sync" target="_blank">Python</a> and keen towards developing API solutions using Django.</p>
-				<p>I also try to write some API's and Backend Stuff with <a 	href="https://github.com/addiittya2006/Mac-J2EE_sync" target="_blank">J2EE</a>, which I am currently learning to master <a href="https://github.com/addiittya2006/Mac-J2EE_sync" target="_blank">Java</a> one day.</p>
-				<p>I also was a <a 	href="https://summerofcode.withgoogle.com/archive/2016/projects/6495064293376000/" 	target="_blank">Google Summer of Code Student</a> in 2016 with the OWASP Foundation working on <a href="https://github.com/nikolamilosevic86/owasp-seraphimdroid" target="_blank">Seraphimdroid</a>.</p>
+				<p>I was a <a 	href="https://summerofcode.withgoogle.com/archive/2016/projects/6495064293376000/" target="_blank">Google Summer of Code Student</a> in 2016 with the OWASP Foundation working on <a href="https://github.com/nikolamilosevic86/owasp-seraphimdroid" target="_blank">Seraphimdroid</a>.</p>
+				<p>I also try to write some API's and Backend Stuff with <a 	href="https://github.com/addiittya2006/Mac-J2EE_sync" target="_blank">J2EE</a>, which I am currently learning to master <a href="https://github.com/addiittya2006/Mac-J2SE_sync" target="_blank">Java</a> one day.</p>
 				<p>In the recent years, I've built many projects for self and for Credits, most of which are available on my Github. These days, I am working to take on some innovative projects, that inspire and interest me. I basically love development, design and OSS, to provide the community with better software, coding one line at a time.</p>
 				<p>Currently, I am studying design and UX closely, looking forward to creating and crafting the perfect experience for a user on the Web and Mobile.</p>
 				<p>I'd be glad to connect with you.</p>
@@ -65,8 +65,7 @@
 					<a href="https://t.me/addiittya2006" target="_blank">Ping Me!</a> |
 					<a href="https://github.com/addiittya2006" target="_blank">Github</a> |
 					<a href="https://medium.com/@addiittya2006" target="_blank">Blog</a> |
-					<a href="https://www.linkedin.com/in/addiittya2006" target="_blank">LinkedIn</a> |
-					<a href="https://addiittya2006.github.io/assets/resume.pdf" target="_blank">Resumé</a>
+					<a href="https://www.linkedin.com/in/addiittya2006" target="_blank">LinkedIn</a>
 				</p>
 				<div id="divider">
 						<span id="dot1"><</span><span id="dot2">/</span><span id="dot3">></span>
