--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html>
 	<head>
 	
-		<title>Aditya's Site</title>
+		<title>adee's space</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="title" content="Aditya Dua">
-		<meta name="description" content="A Student, Web &amp; Android Developer.">
-		<meta name="author" content="addiittya">
+		<meta name="title" content="adee's space">
+		<meta name="description" content="A Mobile &amp; Web Developer.">
+		<meta name="author" content="addiittya2006">
 
 		<link rel="shortcut icon" type="image/png" href="/favicon.png">
-		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' 	type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' 	type='text/css'>
-		<link rel="stylesheet" 	href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" 	href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="style.css">
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script 	src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.	js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.	js"></script>
 		<script src="typed.min.js"></script>
 		<script language="javascript">
 			document.onmousedown=disableclick;
@@ -32,75 +32,61 @@
 
 
 	<body oncontextmenu="return false">
-	
+
 		<div class="container">
-			<div class="row">
-				<div id="divider" class="col-md-10">
-					<span id="dot1"><</span><span id="dot2"></span><span id="dot3">></span>
+			<div class="d-flex justify-content-between">
+				<div id="divider">
+					<span id="dot1">&#60;</span><span id="dot2"></span><span id="dot3">&#62;</span>
 				</div>
-				<p id="intro" class="col-md-10"></p>
-				<div id="typed-intro" class="col-md-10">
-				<p class="intro-fallback">Happy that you're here.</p>
-				<p class="intro-fallback">I'm Aditya.</p>
-				</div>
+				<div id="flag"><img src="flag.png" alt="lgbt pride flag" /></div>
+			</div>
+			<p id="intro"></p>
+			<div id="typed-intro">
+				<p>happy that you're here.</p>
+				<p>i'm adee.</p>
 			</div>
 		</div>
+
 		<div class="container" id="bio">
-			<article class="col-md-10">
-				<p>I'm a Web & Android Enthusiast and a Computer Science Grad. from <a href="http://jiit.ac.in" rel="nofollow" target="_blank">Jaypee Institute of Information Technology</a>.</p>
-				<p>I develop <a href="https://github.com/addiittya2006/Mac-Studio_sync" target="_blank" >Android Apps</a> for Fun and am also very keen towards designing interesting mobile UI's and developing Offline First, Scalable Apps.</p>
-				<p>I love to code in Ruby and develop the web with <a 	href="https://github.com/addiittya2006/Mac-Ruby_sync" target="_blank">Ruby on Rails</a>.</p>
-				<p>I am also familiar with <a href="https://github.com/addiittya2006/Mac-Py_sync" target="_blank">Python</a> and keen towards developing API solutions using Django.</p>
-				<p>I was a <a 	href="https://summerofcode.withgoogle.com/archive/2016/projects/6495064293376000/" target="_blank">Google Summer of Code Student</a> in 2016 with the OWASP Foundation working on <a href="https://github.com/nikolamilosevic86/owasp-seraphimdroid" target="_blank">Seraphimdroid</a>.</p>
-				<p>I also try to write some API's and Backend Stuff with <a 	href="https://github.com/addiittya2006/Mac-J2EE_sync" target="_blank">J2EE</a>, which I am currently learning to master <a href="https://github.com/addiittya2006/Mac-J2SE_sync" target="_blank">Java</a> one day.</p>
+
+			<article>
+				<p class="intro-subtext">(they/them)</p>
+			</article>
+			<article>
+				<p>I'm a Mobile Product Enthusiast and have been working towards learning, building better products everyday.</p>
+				<p>I am employed currently by <a href="https://provakil.com" target="_blank">Provakil</a> to lead their mobile experience forward revolutionising the legal tech sector by automating processes and providing an offline first experience with ease of access.</p>
+				<p>I develop <a href="https://github.com/addiittya2006/Mac-Studio_sync" target="_blank" >Android Apps</a> and love design experiences for smaller form factors and am also very keen towards designing interesting mobile UI's and developing Offline First, Scalable Apps.</p>
+				<p>I also love to code in Ruby and play around web/apis with <a href="https://github.com/addiittya2006/Mac-Ruby_sync" target="_blank">Rails Framework</a>.</p>
+				<p>I was a <a href="https://summerofcode.withgoogle.com/archive/2016/projects/6495064293376000/" target="_blank">Google Summer of Code Student</a> in 2016 with the OWASP Foundation working on <a href="https://github.com/nikolamilosevic86/owasp-seraphimdroid" target="_blank">Seraphimdroid</a>.</p>
+				<p>I also try to write some API's and Backend Stuff with <a href="https://github.com/addiittya2006/Mac-J2EE_sync" target="_blank">J2EE</a>, which I am currently learning to get better at <a href="https://github.com/addiittya2006/Mac-J2SE_sync" target="_blank">Java</a> every day.</p>
 				<p>In the recent years, I've built many projects for self and for Credits, most of which are available on my Github. These days, I am working to take on some innovative projects, that inspire and interest me. I basically love development, design and OSS, to provide the community with better software, coding one line at a time.</p>
-				<p>Currently, I am studying design and UX closely, looking forward to creating and crafting the perfect experience for a user on the Web and Mobile.</p>
+				<p>Currently, I am also dipping my toes into the rust/go pool, to learn to build better systems in general, and hence, better software.</p>
+				<p>I am always studying design and UX closely, looking forward to creating and crafting the perfect experience for a user on the Web and Mobile.</p>
 				<p>I'd be glad to connect with you.</p>
 			</article>
 
-			<footer class="col-md-10">
+			<footer>
 				<br/><br/><br/>
 				<p id="links">
 					<a href="mailto:mail@aditya.science" target="_blank" id="cta">&nbsp;Write a Mail&nbsp;</a> |
-					<a href="https://t.me/addiittya2006" target="_blank">Ping Me!</a> |
+					<a href="resume.pdf" target="_blank">Resumé</a> |
 					<a href="https://github.com/addiittya2006" target="_blank">Github</a> |
 					<a href="https://medium.com/@addiittya2006" target="_blank">Blog</a> |
-					<a href="https://www.linkedin.com/in/addiittya2006" target="_blank">LinkedIn</a>
+					<a href="https://www.linkedin.com/in/addiittya" target="_blank">LinkedIn</a>
 				</p>
 				<div id="divider">
-						<span id="dot1"><</span><span id="dot2">/</span><span id="dot3">></span>
+						<span id="dot1">&#60;</span><span id="dot2">&#47;</span><span id="dot3">&#62;</span>
 				</div>	
 			</footer>
 		</div>
 
 		<script>
-			var loadBanner = function(){
-				var query_string = {};
-				var query = window.location.search.substring(1);
-				var vars = query.split("&");
-				for (var i=0;i<vars.length;i++) {
-					var pair = vars[i].split("=");
-					if (typeof query_string[pair[0]] === "undefined") {
-						query_string[pair[0]] = decodeURIComponent(pair[1]);
-					} else if (typeof query_string[pair[0]] === "string") {
-						var arr = [ query_string[pair[0]],decodeURIComponent(pair[1]) ];
-					query_string[pair[0]] = arr;
-					} else {
-						query_string[pair[0]].push(decodeURIComponent(pair[1]));
-					}
-				}
-				return query_string;
-			}
-			loadBanner();
 			$(function () {
 					$("#intro").typed({
 						stringsElement: $('#typed-intro'),
-						typeSpeed: 5,
+						typeSpeed: 6,
 						callback: function () {
-							// $("#divider").fadeOut("slow", function () {
-								// $("#divider").fadeIn("slow", function () {});
-								$("#bio").fadeIn("slow", function () {});
-							// });
+							$("#bio").fadeIn("slow", function () {});
 						}
 					});
 				}
