update resume file

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 				<br/><br/><br/>
 				<p id="links">
 					<a href="mailto:mail@aditya.science" target="_blank" id="cta">&nbsp;Write a Mail&nbsp;</a> |
-					<a href="resume.pdf" target="_blank">Resumé</a> |
-					<a href="https://github.com/addiittya2006" target="_blank">Github</a> |
-					<a href="https://medium.com/@addiittya2006" target="_blank">Blog</a> |
-					<a href="https://www.linkedin.com/in/addiittya" target="_blank">LinkedIn</a>
+					<a href="resume.pdf" target="_blank">&nbsp;Resumé&nbsp;</a> |
+					<a href="https://github.com/addiittya2006" target="_blank">&nbsp;Github&nbsp;</a> |
+					<a href="https://medium.com/@addiittya2006" target="_blank">&nbsp;Blog&nbsp;</a> |
+					<a href="https://www.linkedin.com/in/addiittya" target="_blank">&nbsp;LinkedIn&nbsp;</a>
 				</p>
 				<div id="divider">
 						<span id="dot1">&#60;</span><span id="dot2">&#47;</span><span id="dot3">&#62;</span>
